# grupo_ofertas_api

./: README.md  docker-compose.yml  pyproject.toml  txt.md
backend/: Dockerfile
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  auth.py  integrations.py  offers.py  rules.py  templates.py  web.py
backend/app/services/: __init__.py  auth.py  headlines.py  integrations.py  metadata.py  offer_builder.py  rules.py  shortener.py  stores.py  users.py
backend/app/static/css/: styles.css
backend/app/templates/: base.html  dashboard.html  integrations.html  login.html  offers.html  rules.html  templates.html
backend/tests/: test_offer_builder.py
