[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grupo-ofertas-api"
version = "0.1.0"
description = "Configurable offer generation platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Grupo Ofertas" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
addopts = "-ra"


[tool.setuptools]
package-dir = {"" = "backend"}
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"app" = [
    "templates/*.html",
    "templates/**/*.html",
    "static/**/*"
]
